--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.14.0",
+        "socket.io-client": "^4.5.2"
     }
 }
